[workspace]
members = [
    "age",
    "age-core",
    "age-plugin",
    "rage",
]
resolver = "2"

[workspace.package]
authors = ["Jack Grigg <thestr4d@gmail.com>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/str4d/rage"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
age = { version = "0.11.1", path = "age" }
age-core = { version = "0.11.0", path = "age-core" }

# Dependencies required by the age specification:
# - Base64 from RFC 4648
base64 = "0.21"

# - ChaCha20-Poly1305 from RFC 7539
chacha20poly1305 = { version = "0.11.0-rc.1", default-features = false, features = ["alloc"] }

# - X25519 from RFC 7748
x25519-dalek = { version = "3.0.0-pre.1", features = ["static_secrets"] }

# - HKDF from RFC 5869 with SHA-256
# - HMAC from RFC 2104 with SHA-256
hkdf = "0.13.0-rc.1"
hmac = "0.13.0-rc.1"
sha2 = "0.11.0-rc.2"

# - scrypt from RFC 7914
scrypt = { version = "0.12.0-rc.2", default-features = false, features = ["password-hash"] }

# - CSPRNG
rand = "0.9"

# - Key encoding
bech32 = "0.9"

# Parsing
cookie-factory = "0.3.1"
nom = { version = "7", default-features = false, features = ["alloc"] }

# Secret management
pinentry = "0.6"
secrecy = "0.10"
subtle = "2"
zeroize = "1"

# Localization
i18n-embed = { version = "0.15", features = ["fluent-system"] }
i18n-embed-fl = "0.9"
lazy_static = "1"
rust-embed = "8"

# CLI
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
console = { version = "0.15", default-features = false }
env_logger = "0.10"
log = "0.4"
