[workspace]
members = [
    "age",
    "age-core",
    "age-plugin",
    "rage",
]
resolver = "2"

[workspace.package]
authors = ["Jack Grigg <thestr4d@gmail.com>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/str4d/rage"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
age = { version = "0.11.1", path = "age" }
age-core = { version = "0.11.0", path = "age-core" }

# Dependencies required by the age specification:
# - Base64 from RFC 4648
base64 = "0.22"

# - ChaCha20-Poly1305 from RFC 7539
chacha20poly1305 = { version = "0.11.0-rc.1", default-features = false, features = ["alloc"] }

# - X25519 from RFC 7748
x25519-dalek = { version = "3.0.0-pre.3", features = ["static_secrets"] }

# - HKDF from RFC 5869 with SHA-256
# - HMAC from RFC 2104 with SHA-256
hkdf = "0.13.0-rc.3"
hmac = "0.13.0-rc.3"
sha2 = "0.11.0-rc.3"

# - scrypt from RFC 7914
scrypt = { version = "0.12.0-rc.2", default-features = false, features = ["password-hash", "phc"] }

# - CSPRNG
rand = "0.10.0-rc.6"

# - Key encoding
bech32 = "0.11"

# Parsing
cookie-factory = "0.3.1"
nom = { version = "8", default-features = false, features = ["alloc"] }

# Secret management
pinentry = "0.8"
secrecy = "0.10"
subtle = "2"
zeroize = "1"

# Localization
i18n-embed = { version = "0.16", features = ["fluent-system"] }
i18n-embed-fl = "0.10"
lazy_static = "1"
rust-embed = "8"

# CLI
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
console = { version = "0.16", default-features = false }
env_logger = "0.10"
log = "0.4"
