[package]
name = "age-core"
description = "[BETA] Common functions used across the age crates"
version = "0.5.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/rage"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[dependencies]
# Dependencies required by the age specification:
# - Base64 from RFC 4648
base64 = "0.13"

# - ChaCha20-Poly1305 from RFC 7539
c2-chacha = "0.3"
chacha20poly1305 = { version = "0.7", default-features = false, features = ["alloc"] }

# - HKDF from RFC 5869 with SHA-256
hkdf = "0.10"
sha2 = "0.9"

# - CSPRNG
rand = "0.7"

# Parsing
cookie-factory = "0.3.1"
nom = { version = "6", default-features = false, features = ["alloc"] }

# Secret management
secrecy = "0.7"

# Plugin backend
tempfile = { version = "3.2.0", optional = true }

[features]
plugin = ["tempfile"]
unstable = []

[lib]
bench = false
