[package]
name = "age-core"
description = "[BETA] Common functions used across the age crates"
version = "0.8.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/rage"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
# Dependencies required by the age specification:
# - Base64 from RFC 4648
base64 = "0.13"

# - ChaCha20-Poly1305 from RFC 7539
chacha20poly1305 = { version = "0.9", default-features = false, features = ["alloc"] }

# - HKDF from RFC 5869 with SHA-256
hkdf = "0.12"
sha2 = "0.10"

# - CSPRNG
rand = "0.8"

# Parsing
cookie-factory = "0.3.1"
nom = { version = "7", default-features = false, features = ["alloc"] }

# Secret management
secrecy = "0.8"

# Plugin backend
io_tee = "0.1.1"
tempfile = { version = "3.2.0", optional = true }

[features]
plugin = ["tempfile"]
unstable = []

[lib]
bench = false
