[package]
name = "age-core"
description = "[BETA] Common functions used across the age crates"
version = "0.10.0"
authors.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
# Dependencies exposed in a public API:
# (Breaking upgrades to these require a breaking upgrade to this crate.)
chacha20poly1305.workspace = true
cookie-factory.workspace = true
io_tee = "0.1.1"
nom.workspace = true
secrecy.workspace = true

# Dependencies used internally:
# (Breaking upgrades to these are usually backwards-compatible, but check MSRVs.)
base64.workspace = true
hkdf.workspace = true
rand.workspace = true
sha2.workspace = true
tempfile = { version = "3.2.0", optional = true }

[features]
plugin = ["tempfile"]
unstable = []

[lib]
bench = false
