[package]
name = "age-plugin"
description = "[BETA] API for writing age plugins."
version = "0.2.1"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/rage"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
age-core = { version = "0.7.1", path = "../age-core", features = ["plugin"] }
bech32 = "0.8"
chrono = "0.4"

[dev-dependencies]
gumdrop = "0.8"

[lib]
bench = false
