[package]
name = "age"
description = "[BETA] A simple, secure, and modern encryption library."
version = "0.6.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/rage"
readme = "README.md"
keywords = ["rage", "encryption"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[dependencies]
age-core = { version = "0.6.0", path = "../age-core" }

# Dependencies required by the age specification:
# - Base64 from RFC 4648
base64 = "0.13"

# - ChaCha20-Poly1305 from RFC 7539
c2-chacha = "0.3"
chacha20poly1305 = { version = "0.7", default-features = false, features = ["alloc"] }

# - X25519 from RFC 7748
x25519-dalek = "1"

# - HKDF from RFC 5869 with SHA-256
# - HMAC from RFC 2104 with SHA-256
hkdf = "0.11"
hmac = "0.11"
sha2 = "0.9"

# - scrypt from RFC 7914
scrypt = { version = "0.8", default-features = false }

# - CSPRNG
rand = "0.8"
rand_7 = { package = "rand", version = "0.7" }

# - Key encoding
bech32 = "0.8"

# OpenSSH-specific dependencies:
# - RSAES-OAEP from RFC 8017 with SHA-256 and MGF1
num-traits = { version = "0.2", optional = true }
rsa = { version = "0.5", optional = true }

# - Conversion of public keys from Ed25519 to X25519
curve25519-dalek = { version = "3", optional = true }

# - Encrypted keys
aes = { version = "0.7", optional = true, features = ["ctr"] }
bcrypt-pbkdf = { version = "0.7", optional = true }
block-modes = { version = "0.8", optional = true }

# Parsing
cookie-factory = "0.3.1"
nom = { version = "7", default-features = false, features = ["alloc"] }

# Secret management
secrecy = "0.8"
subtle = "2"
zeroize = "1"

# Async I/O
futures = { version = "0.3", optional = true }
pin-project = "1"

# Localization
i18n-embed = { version = "0.13", features = ["fluent-system"] }
i18n-embed-fl = "0.6"
lazy_static = "1"
rust-embed = "6"

# Common CLI dependencies
console = { version = "0.14", optional = true }
pinentry = { version = "0.5", optional = true }
rpassword = { version = "5", optional = true }

web-sys = { version = "0.3", optional = true, features = ["Window", "Performance"]}

[target.'cfg(any(unix, windows))'.dependencies]
# Plugin management
which = { version = "4", optional = true }
wsl = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.3"
criterion-cycles-per-byte = "0.1"
futures-test = "0.3"
quickcheck = "1"
quickcheck_macros = "1"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.5", features = ["criterion", "flamegraph"] }

[features]
default = []
armor = []
async = ["futures"]
cli-common = ["console", "pinentry", "rpassword"]
plugin = ["age-core/plugin", "which", "wsl"]
ssh = [
    "aes",
    "bcrypt-pbkdf",
    "block-modes",
    "curve25519-dalek",
    "num-traits",
    "rsa",
]
unstable = ["age-core/unstable"]

[lib]
bench = false

[[test]]
name = "test_vectors"
required-features = ["ssh"]

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "throughput"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
