[package]
name = "rage"
description = "[BETA] A simple, secure, and modern encryption tool."
version = "0.9.2"
authors.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["age", "cli", "encryption"]
categories = ["command-line-utilities", "cryptography"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "rage"

[package.metadata.deb]
name = "rage"
conflicts = "rage-musl"
extended-description = """\
age is a simple, modern, and secure encryption format with small explicit keys, \
no config options, and UNIX-style composability. rage is a Rust implementation \
of the age specification."""
section = "utils"
assets = [
    ["target/release/rage", "usr/bin/", "755"],
    ["target/release/rage-keygen", "usr/bin/", "755"],
    ["target/release/rage-mount", "usr/bin/", "755"],
    ["../target/completions/rage.bash", "usr/share/bash-completion/completions/rage", "644"],
    ["../target/completions/rage-keygen.bash", "usr/share/bash-completion/completions/rage-keygen", "644"],
    ["../target/completions/rage-mount.bash", "usr/share/bash-completion/completions/rage-mount", "644"],
    ["../target/completions/rage.fish", "usr/share/fish/completions/", "644"],
    ["../target/completions/rage-keygen.fish", "usr/share/fish/completions/", "644"],
    ["../target/completions/rage-mount.fish", "usr/share/fish/completions/", "644"],
    ["../target/completions/rage.zsh", "usr/share/zsh/functions/Completion/Debian/", "644"],
    ["../target/completions/rage-keygen.zsh", "usr/share/zsh/functions/Completion/Debian/", "644"],
    ["../target/completions/rage-mount.zsh", "usr/share/zsh/functions/Completion/Debian/", "644"],
    ["../target/manpages/rage.1.gz", "usr/share/man/man1/", "644"],
    ["../target/manpages/rage-keygen.1.gz", "usr/share/man/man1/", "644"],
    ["../target/manpages/rage-mount.1.gz", "usr/share/man/man1/", "644"],
    ["../README.md", "usr/share/doc/rage/README.md", "644"],
]
features = ["mount"]

[package.metadata.deb.variants.musl]
name = "rage-musl"
conflicts = "rage"
extended-description = """\
age is a simple, modern, and secure encryption format with small explicit keys, \
no config options, and UNIX-style composability. rage is a Rust implementation \
of the age specification. This package is statically linked against musl."""
features = []

[badges]
maintenance = { status = "experimental" }

[dependencies]
# rage and rage-keygen dependencies
age = { workspace = true, features = ["armor", "cli-common", "plugin"] }
chrono.workspace = true
clap = { workspace = true, features = ["string", "unstable-styles"] }
console.workspace = true
env_logger.workspace = true
i18n-embed = { workspace = true, features = ["desktop-requester"] }
i18n-embed-fl.workspace = true
lazy_static.workspace = true
log.workspace = true
pinentry.workspace = true
rust-embed.workspace = true

# rage-mount dependencies
ctrlc = { version = "3.2", optional = true }
fuse_mt = { version = "0.6.0", optional = true }
fuser = { version = "0.13", optional = true }
libc = { version = "0.2", optional = true }
tar = { version = "0.4", optional = true }
time = { version = ">=0.3.7, <0.3.24", optional = true } # time 0.3.24 has MSRV 1.67
zip = { version = "0.6.2", optional = true }

[dev-dependencies]
clap_complete = "4"
flate2 = "1"
man = "0.3"
trycmd = "0.14"

[features]
default = ["ssh"]
mount = ["ctrlc", "fuse_mt", "fuser", "libc", "tar", "time", "zip"]
ssh = ["age/ssh"]
unstable = ["age/unstable"]

[[bin]]
name = "rage"
bench = false

[[bin]]
name = "rage-keygen"
bench = false

[[bin]]
name = "rage-mount"
required-features = ["mount"]
bench = false
